# Sonic-Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/engine/: Action.cpp  Action.hpp  Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  Scene.cpp  Scene.hpp  main.cpp
src/game/: Assets.json  CMakeLists.txt  GameScene.cpp  GameScene.hpp  IDs.hpp  MenuScene.cpp  MenuScene.hpp  main.cpp
src/game/Assets/Textures/Aseprite/: Sonic_Idle.aseprite  Sonic_Test.aseprite
